syntax = "proto3";

package pb;

option go_package = "internal/sumo-integration/pb";

import "dtos/sumo_xml_file.proto";

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "google/protobuf/timestamp.proto";



option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  security_definitions: {
    security: {
      key: "bearer"
      value: {
        type: TYPE_API_KEY
        in: IN_HEADER
        name: "Authorization"
        description: "Authentication token, prefixed by Bearer: Bearer <token>"
      }
    }
  }
  security: {
    security_requirement: {
      key: "bearer"
    }
  }
};

service SumoIntegrationCurrentTrafficDataByDetectionPointByLaneService {

  rpc SumoIntegrationCreateCurrentTrafficDataByDetectionPointByLaneFromXml(SumoIntegrationCreateCurrentTrafficDataByDetectionPointByLaneFromXmlRequest) returns (SumoIntegrationCreateCurrentTrafficDataByDetectionPointByLaneFromXmlResponse) {
    option (google.api.http) = {
      post: "/api/v1/sumo/datasource/{data_source_name}/traffic/current/detection_point/lane/from-xml",
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer";
        }
      }
    };
  }
}


message SumoIntegrationCreateCurrentTrafficDataByDetectionPointByLaneFromXmlRequest {
  string data_source_name = 1;
  google.protobuf.Timestamp start_time = 2;
  XmlFile xml = 3;
}

message SumoIntegrationCreateCurrentTrafficDataByDetectionPointByLaneFromXmlResponse {
  string message = 1;
}